<resources>
    <string name="app_name">KAPPA</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Anmelden</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ErrorUnerreichbar">Der Kappa-Server ist leider aktuell nicht erreichbar.</string>
    <string name="Email">E-Mail</string>
    <string name="save_credentials">Anmeldedaten speichern</string>
    <string name="sign_in">Anmelden</string>
    <string name="sign_up">Registrieren</string>
    <string name="logged_in">Anmeldung erfolgreich!</string>
    <string name="login_impossible">Anmeldung war nicht möglich: Benutzername oder Passwort falsch.</string>
    <string name="network_error">Es ist ein Netzwerkfehler aufgetreten!</string>
    <string name="forgot_PW">Passwort vergessen</string>
    <string name="signed_up">Konto wurde erfolgreich erstellt!</string>
    <string name="resetted">Sie erhalten eine E-Mail mit einem Rücksetzlink. Dieser setzt das Passwort auf das von Ihnen gewählte zurück.</string>
    <string name="neues_PW">Bitte geben Sie ein neues Passwort ein.</string>
    <string name="user_nicht_da">Die eingegebene E-Mail-Adresse ist nicht bekannt.</string>
    <string name="main_title">KAPPA - Funktionsauswahl</string>
    <string name="login_Title">KAPPA - Login</string>
    <string name="zur_EInkausliste">Meine Einkaufsliste</string>
    <string name="zu_schrank">Meine Kühlschränke</string>
    <string name="zu_Login">Abmelden / Benutzer wechseln</string>
    <string name="title_activity_einkauf">KAPPA - Meine Einkaufsliste</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="reload">Aktualisieren</string>
    <string name="title_activity_einkaufslisten">EinkaufslistenActivity</string>
    <string name="einkaeufe">Ihre Einkaufsliste:</string>
    <string name="neuer_Einkauf">Einkauf hinzufügen</string>
    <string name="update_Einkauf">Einkauf ändern</string>
    <string name="einkauf_loeschen_titel">Löschen bestätigen</string>
    <string name="einkauf_loeschen">Diesen Eintrag wirklich löschen?</string>
    <string name="Einkauf_Beschreibung">Bitte geben Sie den zu erledigenden Einkauf ein!</string>
    <string name="delete_Einkauf">Diesen Einkauf löschen.</string>
    <string name="title_activity_schrank">SchrankActivity</string>
    <string name="title_Schrankwahl">KAPPA - Kühlschrankauswahl</string>
    <string name="info_Name">Name des Kühlschranks:</string>
    <string name="neuer_Schrank">Kühlschrank hinzufügen:</string>
    <string name="schrank_aktualisieren">Kühlschrankname bearbeiten:</string>
    <string name="info_faecher">Zahl der Fächer:</string>
    <string name="schrank_loeschen_titel">Löschen bestätigen</string>
    <string name="schrank_loeschen">Möchten Sie diesen Kühlschrank wirklich löschen?</string>
    <string name="unauth_titel">Benutzerdaten falsch</string>
    <string name="unauth">Die gespeicherten Benutzerdaten sind nicht gültig. Bitte melden Sie sich neu an.</string>
    <string name="info_schraenke">Ihre Kühlschränke:</string>
    <string name="title_activity_inhalt">KAPPA - Kühlschrankinhalt</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="fehler_schrank">Der gewählte Kühlschrank konnte leider nicht geöffnet werden!</string>
    <string name="name_inhalte">Ihre Lebensmittel:</string>
    <string name="neues_Fach">Fach hinzufügen</string>
    <string name="update_Fach">Fach ändern</string>
    <string name="add_Fach">Fach hinzufügen</string>
    <string name="add_Fach_info">Name des Fachs:</string>
    <string name="neues_LM">Neues Lebensmittel hinzufügen</string>
    <string name="LM_aendern">Lebensmittel ändern</string>
    <string name="info_Name_LM">Name des Lebensmittels:</string>
    <string name="info_Anzahl_LM">Anzahl des Lebensmittels:</string>
    <string name="info_MHD">Mindesthaltbarkeitsdatum speichern?</string>
    <string name="name">Name</string>
    <string name="anzahl">Anzahl</string>
    <string name="haltbar">Verbleibende Haltbarkeit</string>
    <string name="keine_Angabe">Keine Angabe.</string>
    <string name="tage">Tage</string>
    <string name="monate">Monate</string>
    <string name="jahre">Jahre</string>
    <string name="abgelaufen">Abgelaufen!</string>
    <string name="fach_akt_inhalt">Aktuelles Fach: </string>
    <string name="kein_Fach_da">Der aktuelle Kühlschrank hat noch kein Fach.</string>
    <string name="title_LM">KAPPA - Lebensmittel</string>
    <string name="essen_loeschen_titel">Lebensmittel löschen?</string>
    <string name="suche_name">KAPPA - Suche</string>
    <string name="suchen">Lebensmittel suchen</string>
    <string name="suchbegriff">Suchbegriff</string>
    <string name="fach">Fach</string>
    <string name="start_Daemon">Haltbarkeitsüberwachung starten</string>
    <string name="schrank">Kühlschrank</string>
    <string name="ueberwachung_autostart">Haltbarkeitsüberwachung automatisch bei System- oder Appstart starten.</string>
    <string name="config">Widget konfigurieren</string>
    <string name="addwidget">Widget hinzufügen</string>
</resources>