<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.ddns.worldofjarcraft.kappa.LaunchActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:background="@android:color/transparent"
                android:onClick="back"
                android:src="@drawable/back" />

            <CheckedTextView
                android:id="@+id/checkedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:text="@string/main_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/schraenkeButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/einkaufButton"
        android:layout_marginTop="38dp"
        android:drawableLeft="@mipmap/icon"
        android:text="@string/zu_schrank"
        android:textSize="24sp" />

    <Button
        android:id="@+id/einkaufButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="44dp"
        android:drawableLeft="@drawable/einkauf"
        android:text="@string/zur_EInkausliste"
        android:textSize="24sp" />

    <Button
        android:id="@+id/logoffButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/autostart_ueberwachung"
        android:layout_marginTop="55dp"
        android:drawableLeft="@drawable/user"
        android:text="@string/zu_Login"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startDaemon"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/schraenkeButton"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/reload"
        android:text="@string/start_Daemon"
        android:textAlignment="center"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/autostart_ueberwachung"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/startDaemon"
        android:layout_marginTop="39dp"
        android:onClick="autostart_service"
        android:text="@string/ueberwachung_autostart"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

</RelativeLayout>
</ScrollView>
